fix parsing lists of strings and keywords when there are extra spaces more unit tests

--- a/tests/tufte/tufte.css
+++ b/tests/tufte/tufte.css
@@ -53,12 +53,7 @@ body {
     color: #111;
     max-width: 1400px;
     counter-reset: sidenote-counter;
-}
-/*
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
- */
-foo {
-    bar:baz;
 }
 
 h1 {
